Design: 메인 영상 위 content line-height 조정

--- a/main-top.html
+++ b/main-top.html
@@ -59,8 +59,6 @@
       </div>
   </nav> 
 
-
-
     <!-- 하이오 커피 비디오--> 
     <div class="main-top-video-section">
       <video width="560" height="315" autoplay loop muted>
@@ -73,8 +71,6 @@
           <div class="main-top-video-lastline">하이오커피</div>
       </div>
     </div> 
-
-
 
     <!--하이오 커피 소개 캐러셀-->
     <div>
@@ -106,6 +102,7 @@
       </div>
     </div>
 
+    <!--하이오커피 가치 문구-->
     <section class="container main-top-section inner" data-aos="fade-up" data-aos-duration="2500"> 
       <div>
         <div class="main-top-title">
@@ -116,7 +113,6 @@
           A Reasonable price, A High-quality coffee, Anyone, At any Time With HIO
         </span>
       </div>
-
       <ul>
         <li>
           <img src="./src/maintop-coffeebean.png"/>
@@ -148,7 +144,6 @@
             지속적인 메뉴 개발로 브랜드 경쟁력을 올립니다</p>
         </li>
       </ul>
-
     </section>
 
     <!--main-bottom 들어갈 자리 -->
@@ -156,33 +151,36 @@
     <!-- 
     <footer class="footer-container">
       <div class="footer-items">
-        <div class="footer-menu-container">
+      <div class="footer-menu-container">
           <p class="footer-menu">사이트 이용약관</p>
           <p class="footer-menu">개인정보취급방침</p>
           <p class="footer-menu">이메일무단수집거부</p>
           <p class="footer-menu">찾아오시는 길</p>
-        </div>
-        <div class="footer-secondline-container">
-          <img src="https://hiocoffee.com/sub/img/logo2.png" style="height: fit-content; width: fit-content;"/>
+      </div>
+      <div class="footer-secondline-container">
+          <img src="./src/logo-white.png" style="height: 55px; width: fit-content;"/>
           <div class="footer-secondline-location">
-            <p style="margin-bottom: 5px;">하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워 A동</p>
-            <p style="margin-bottom: 5px;">하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동 301호</p>
-            <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
+          <p style="margin-bottom: 5px;">하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워 A동</p>
+          <p style="margin-bottom: 5px;">하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동 301호</p>
+          <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
           </div>
-        </div>
-        <div class="footer-info-container">
+      </div>
+      <div class="footer-info-container">
           <p class="footer-info">회사명 : (주)코알누</p>
           <p class="footer-info">TEL : 1345-7890</p>
           <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
           <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
-        </div>
-        <div class="footer-copyright">
+      </div>
+      <div class="footer-copyright">
           <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
-        </div>
-        <div class="footer-media-logo-container">
-        <img class="footer-media-logo" src="https://hiocoffee.com/sub/img/logo_n.png">
-        </div>
-        -->
+      </div>
+      <div class="footer-media-logo-container">
+      <img class="footer-media-logo" src="src/logo-media-bottom.png" style="height: 20vh; width: 23vw;">
+      </div>
+  </footer>
+  -->
+
+    
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
