--- a/menu-bottom.html
+++ b/menu-bottom.html
@@ -20,10 +20,58 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
     />
+    <script src="https://kit.fontawesome.com/2c827c8cca.js" crossorigin="anonymous"></script> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="menu.css" />
   </head>
 
   <body>
+    <nav class="nav">
+        <div class="nav-style">
+            <div class="nav-logo">
+                <img src="./src/logo-black-withCoffee.png" style="height: 65px;">
+            </div>
+            <div class="nav-logo-mediaQuery">
+                <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
+            </div>
+            <div class="nav-menu">
+                <h3 class="nav-menu-text">ABOUT</h3>
+                <h3 class="nav-menu-text">MENU</h3>
+                <h3 class="nav-menu-text">COMMUNITY</h3>
+            </div>
+            <div class="nav-sns">
+                <div class="nav-ico-box">
+                    <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i>
+                </div>
+                <div class="nav-ico-box">
+                    <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+                </div>
+                <div class="nav-ico-box">
+                    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+                </div>
+            </div>
+
+            <!-- 테블릿, 모바일용 nav 오프캔버스 -->
+            <div class="nav-offcanvas">
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars" style="color: #ffffff;"></i></button>
+                    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+                    <div class="offcanvas-header">
+                        <h4 class="offcanvas-header-text" id="offcanvasTopLabel">CATEGORY</h4>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <div class="nav-offcanvas-container">
+                        <p class="nav-offcanvas-menu">ABOUT</p>
+                        <p class="nav-offcanvas-menu">MENU</p>
+                        <p class="nav-offcanvas-menu">COMMUNITY</p>
+                        </div>
+                    </div>
+                    </div>
+            </div>
+        </div>
+    </nav>
+
+
     <!--메뉴 카드 구성-->
     <menu-card>
       <div class="container mt-4">
@@ -316,7 +364,7 @@
 
     <!--포스트 슬라이더 구성-->
     <last-season-menu-slider>
-      <div class="container mt-4">
+      <div class="container mt-4 mb-5">
         <!-- Autoplay 슬라이드 -->
         <div class="autoplay">
           <div>
@@ -388,7 +436,38 @@
         </div>
       </div>
     </last-season-menu-slider>
-    <footer>여기는 이제 footer 들어가욤</footer>
+    
+    <footer class="footer-container">
+        <div class="footer-items">
+          <div class="footer-menu-container">
+            <p class="footer-menu">사이트 이용약관</p>
+            <p class="footer-menu">개인정보취급방침</p>
+            <p class="footer-menu">이메일무단수집거부</p>
+            <p class="footer-menu">찾아오시는 길</p>
+          </div>
+          <div class="footer-secondline-container">
+            <img src="./src/logo-white.png" style="height: 55px; width: fit-content;"/>
+            <div class="footer-secondline-location">
+              <p style="margin-bottom: 5px;">하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워 A동</p>
+              <p style="margin-bottom: 5px;">하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동 301호</p>
+              <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
+            </div>
+          </div>
+          <div class="footer-info-container">
+            <p class="footer-info">회사명 : (주)코알누</p>
+            <p class="footer-info">TEL : 1345-7890</p>
+            <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
+            <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
+          </div>
+          <div class="footer-copyright">
+            <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
+          </div>
+          <div class="footer-media-logo-container">
+          <img class="footer-media-logo" src="src/logo-media-bottom.png" style="height: 20vh; width: 23vw;">
+          </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
