--- a/main-bottom.html
+++ b/main-bottom.html
@@ -15,27 +15,27 @@
 
   <body>
     <div id="test">main-top</div>
-    <section id="drink-section">
-      <div class="drink-text">
-        <h3 class="drink-title">
+    <section id="main-bottom-drink-section">
+      <div class="main-bottom-drink-text">
+        <h3 class="main-bottom-drink-title">
           <span>NOONA COFFEE</span>
           'S BEST MENU
         </h3>
         <p>"눈나커피의 베스트 메뉴를 만나보세요."</p>
       </div>
-      <div id="drinks-wrapper"></div>
+      <div id="main-bottom-drinks-wrapper"></div>
     </section>
-    <section id="map-section">
-      <div class="map-text">
-        <h3 class="map-title">
+    <section id="main-bottom-map-section">
+      <div class="main-bottom-map-text">
+        <h3 class="main-bottom-map-title">
           <span>NOONA COFFEE</span>
           'S BEST MENU
         </h3>
         <p>"눈나커피의 여러분 가까이에 있습니다."</p>
       </div>
-      <div id="map-wrapper">
-        <div class="box">
-          <iframe class="map"
+      <div id="main-bottom-map-wrapper">
+        <div class="main-bottom-map-box">
+          <iframe class="main-bottom-map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1583.1440928992101!2d126.8798519455586!3d37.47752520416433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b61e4a462e171%3A0x2bdafe907d847f4c!2z7ISc7Jq47Yq567OE7IucIOq4iOyynOq1rCDqsIDsgrDrlJTsp4DthLgy66Gc!5e0!3m2!1sko!2skr!4v1717780561519!5m2!1sko!2skr"
             style="border: 0"
             allowfullscreen=""
@@ -51,8 +51,8 @@
             "코알누타워 A동"
           </span>
         </div>
-        <div class="box">
-          <iframe class="map"
+        <div class="main-bottom-map-box">
+          <iframe class="main-bottom-map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.559918385138!2d129.1284854764166!3d35.16759467275741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c7030f85e1%3A0x715805dce1f8c642!2z67aA7IKw6rSR7Jet7IucIO2VtOyatOuMgOq1rCDshLzthYAx66GcIDk!5e0!3m2!1sko!2skr!4v1717780725054!5m2!1sko!2skr"
             style="border: 0"
             allowfullscreen=""
@@ -68,8 +68,8 @@
             "코알누타워 E동 301호"
           </span>
         </div>
-        <div class="box">
-          <iframe class="map"
+        <div class="main-bottom-map-box">
+          <iframe class="main-bottom-map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.2139764914536!2d126.80289937641703!3d35.176219022754566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357188ca27fbca35%3A0x1c9202e8abd3d4c6!2z6rSR7KO86rSR7Jet7IucIOq0keyCsOq1rCDsgrDsoJXqs7Xsm5DroZw5M-uyiOq4uA!5e0!3m2!1sko!2skr!4v1717780753659!5m2!1sko!2skr"
             style="border: 0"
             allowfullscreen=""
