--- a/menu-bottom.html
+++ b/menu-bottom.html
@@ -20,61 +20,88 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
     />
-    <script src="https://kit.fontawesome.com/2c827c8cca.js" crossorigin="anonymous"></script> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="menu.css" />
+    <script
+      src="https://kit.fontawesome.com/2c827c8cca.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/menu-bottom.css" />
   </head>
 
   <body>
     <nav class="nav">
-        <div class="nav-style">
-            <div class="nav-logo">
-                <img src="./src/logo-black-withCoffee.png" style="height: 65px;">
-            </div>
-            <div class="nav-logo-mediaQuery">
-                <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
-            </div>
-            <div class="nav-menu">
-                <h3 class="nav-menu-text">ABOUT</h3>
-                <h3 class="nav-menu-text">MENU</h3>
-                <h3 class="nav-menu-text">COMMUNITY</h3>
-            </div>
-            <div class="nav-sns">
-                <div class="nav-ico-box">
-                    <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i>
-                </div>
-                <div class="nav-ico-box">
-                    <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
-                </div>
-                <div class="nav-ico-box">
-                    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
-                </div>
-            </div>
-
-            <!-- 테블릿, 모바일용 nav 오프캔버스 -->
-            <div class="nav-offcanvas">
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars" style="color: #ffffff;"></i></button>
-                    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
-                    <div class="offcanvas-header">
-                        <h4 class="offcanvas-header-text" id="offcanvasTopLabel">CATEGORY</h4>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <div class="nav-offcanvas-container">
-                        <p class="nav-offcanvas-menu">ABOUT</p>
-                        <p class="nav-offcanvas-menu">MENU</p>
-                        <p class="nav-offcanvas-menu">COMMUNITY</p>
-                        </div>
-                    </div>
-                    </div>
-            </div>
+      <div class="nav-style">
+        <div class="nav-logo">
+          <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
         </div>
+        <div class="nav-logo-mediaQuery">
+          <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0" />
+        </div>
+        <div class="nav-menu">
+          <h3 class="nav-menu-text">ABOUT</h3>
+          <h3 class="nav-menu-text">MENU</h3>
+          <h3 class="nav-menu-text">COMMUNITY</h3>
+        </div>
+        <div class="nav-sns">
+          <div class="nav-ico-box">
+            <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff"></i>
+          </div>
+          <div class="nav-ico-box">
+            <i class="fa-brands fa-twitter" style="color: #ffffff"></i>
+          </div>
+          <div class="nav-ico-box">
+            <i class="fa-brands fa-facebook" style="color: #ffffff"></i>
+          </div>
+        </div>
+
+        <!-- 테블릿, 모바일용 nav 오프캔버스-->
+        <div class="nav-offcanvas">
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasTop"
+            aria-controls="offcanvasTop"
+          >
+            <i class="fa-solid fa-bars" style="color: #ffffff"></i>
+          </button>
+          <div
+            class="offcanvas offcanvas-top"
+            tabindex="-1"
+            id="offcanvasTop"
+            aria-labelledby="offcanvasTopLabel"
+          >
+            <div class="offcanvas-header">
+              <h4 class="offcanvas-header-text" id="offcanvasTopLabel">
+                CATEGORY
+              </h4>
+              <button
+                type="button"
+                class="btn-close text-reset"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
+              <div class="nav-offcanvas-container">
+                <p class="nav-offcanvas-menu">ABOUT</p>
+                <p class="nav-offcanvas-menu">MENU</p>
+                <p class="nav-offcanvas-menu">COMMUNITY</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </nav>
 
-
     <menu-bottom>
-        <!--메뉴 카드 구성-->
-    <menu-card>
+      <!--메뉴 카드 구성-->
+      <menu-card>
         <div class="container mt-4">
           <!--첫줄 -->
           <div class="row">
@@ -140,8 +167,8 @@
                   <div class="menu-info-title"><h5>한라봉에이드</h5></div>
                   <div class="menu-info-text">
                     <p>
-                      상큼달콤한 한라봉에 톡 터지는 탄산을 더하여 입안 가득 청량한
-                      맛을 즐길 수 있는 음료
+                      상큼달콤한 한라봉에 톡 터지는 탄산을 더하여 입안 가득
+                      청량한 맛을 즐길 수 있는 음료
                     </p>
                   </div>
                 </div>
@@ -187,7 +214,9 @@
                 <div class="menu-info">
                   <div class="menu-info-title"><h5>수박주스</h5></div>
                   <div class="menu-info-text">
-                    <p>시원달콤한 수박의 과즙이 그대로 살아있는 리얼 수박 음료</p>
+                    <p>
+                      시원달콤한 수박의 과즙이 그대로 살아있는 리얼 수박 음료
+                    </p>
                   </div>
                 </div>
               </div>
@@ -207,7 +236,9 @@
                 <div class="menu-info">
                   <div class="menu-info-title"><h5>수박 스무디</h5></div>
                   <div class="menu-info-text">
-                    <p>수박 주스를 얼음과 같이 갈아 만든 시원함이 가득한 음료</p>
+                    <p>
+                      수박 주스를 얼음과 같이 갈아 만든 시원함이 가득한 음료
+                    </p>
                   </div>
                 </div>
               </div>
@@ -228,8 +259,8 @@
                   <div class="menu-info-title"><h5>콜드브루 라떼</h5></div>
                   <div class="menu-info-text">
                     <p>
-                      고소한 우유와 깔끔하고 부드러운 콜드브루의 맛을 동시에 즐길
-                      수 있는 커피
+                      고소한 우유와 깔끔하고 부드러운 콜드브루의 맛을 동시에
+                      즐길 수 있는 커피
                     </p>
                   </div>
                 </div>
@@ -248,11 +279,13 @@
                 </div>
                 <!--메뉴 설명 호버 이벤트-->
                 <div class="menu-info">
-                  <div class="menu-info-title"><h5>콜드브루 바닐라 라떼</h5></div>
+                  <div class="menu-info-title">
+                    <h5>콜드브루 바닐라 라떼</h5>
+                  </div>
                   <div class="menu-info-text">
                     <p>
-                      깔끔한 콜드브루와 바닐라의 맛과 향을 첨가하여 더욱 풍미 깊은
-                      커피
+                      깔끔한 콜드브루와 바닐라의 맛과 향을 첨가하여 더욱 풍미
+                      깊은 커피
                     </p>
                   </div>
                 </div>
@@ -279,8 +312,8 @@
                   </div>
                   <div class="menu-info-text">
                     <p>
-                      깔끔한 콜드브루와 고소한 헤이즐넛의 향을 첨가하여 더욱 풍미
-                      깊은 커피
+                      깔끔한 콜드브루와 고소한 헤이즐넛의 향을 첨가하여 더욱
+                      풍미 깊은 커피
                     </p>
                   </div>
                 </div>
@@ -299,7 +332,9 @@
                 </div>
                 <!--메뉴 설명 호버 이벤트-->
                 <div class="menu-info">
-                  <div class="menu-info-title"><h5>콜드브루 카라멜 라떼</h5></div>
+                  <div class="menu-info-title">
+                    <h5>콜드브루 카라멜 라떼</h5>
+                  </div>
                   <div class="menu-info-text">
                     <p>깔끔한 콜드브루와 카라멜 향 가득 풍미 깊은 커피</p>
                   </div>
@@ -341,7 +376,9 @@
                 </div>
                 <!--메뉴 설명 호버 이벤트-->
                 <div class="menu-info">
-                  <div class="menu-info-title"><h5>콜드브루 아인슈페너</h5></div>
+                  <div class="menu-info-title">
+                    <h5>콜드브루 아인슈페너</h5>
+                  </div>
                   <div class="menu-info-text">
                     <p>
                       깔끔하고 깊은 콜드브루와 달콤하고 부드러운 크림이 올라간
@@ -358,11 +395,11 @@
       <div class="last-season-title text-center">
         <!--타이틀-->
         <h4>
-          눈나커피’s <span>Last Season Menu</span>
+          눈나커피's <span>Last Season Menu</span>
           <div>____</div>
         </h4>
       </div>
-  
+
       <!--포스트 슬라이더 구성-->
       <last-season-menu-slider>
         <div class="container mt-4 mb-5">
@@ -377,6 +414,12 @@
             <div>
               <img
                 src="https://www.hiocoffee.com/data/file/03_01/thumb-3421165096_ZDJyXtCP_4efc719b3689a5dedafc81d656847272d6529917_500x.jpg"
+                alt="메뉴 이미지"
+              />
+            </div>
+            <div>
+              <img
+                src="https://www.hiocoffee.com/data/file/03_01/thumb-3421165096_Qjus5LnX_f1e3f53bd4b0b62daf678101c4e773fc29ddbaf0_500x.jpg"
                 alt="메뉴 이미지"
               />
             </div>
@@ -432,35 +475,52 @@
         </div>
       </last-season-menu-slider>
     </menu-bottom>
-    
+
     <footer class="footer-container">
-        <div class="footer-items">
-          <div class="footer-menu-container">
-            <p class="footer-menu">사이트 이용약관</p>
-            <p class="footer-menu">개인정보취급방침</p>
-            <p class="footer-menu">이메일무단수집거부</p>
-            <p class="footer-menu">찾아오시는 길</p>
+      <div class="footer-items">
+        <div class="footer-menu-container">
+          <p class="footer-menu">사이트 이용약관</p>
+          <p class="footer-menu">개인정보취급방침</p>
+          <p class="footer-menu">이메일무단수집거부</p>
+          <p class="footer-menu">찾아오시는 길</p>
+        </div>
+        <div class="footer-secondline-container">
+          <img
+            src="./src/logo-white.png"
+            style="height: 55px; width: fit-content"
+          />
+          <div class="footer-secondline-location">
+            <p style="margin-bottom: 5px">
+              하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101
+              코알누타워 A동
+            </p>
+            <p style="margin-bottom: 5px">
+              하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
+              301호
+            </p>
+            <p>
+              하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림
+              101호
+            </p>
           </div>
-          <div class="footer-secondline-container">
-            <img src="./src/logo-white.png" style="height: 55px; width: fit-content;"/>
-            <div class="footer-secondline-location">
-              <p style="margin-bottom: 5px;">하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워 A동</p>
-              <p style="margin-bottom: 5px;">하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동 301호</p>
-              <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
-            </div>
-          </div>
-          <div class="footer-info-container">
-            <p class="footer-info">회사명 : (주)코알누</p>
-            <p class="footer-info">TEL : 1345-7890</p>
-            <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
-            <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
-          </div>
-          <div class="footer-copyright">
-            <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
-          </div>
-          <div class="footer-media-logo-container">
-          <img class="footer-media-logo" src="src/logo-media-bottom.png" style="height: 20vh; width: 23vw;">
-          </div>
+        </div>
+        <div class="footer-info-container">
+          <p class="footer-info">회사명 : (주)코알누</p>
+          <p class="footer-info">TEL : 1345-7890</p>
+          <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
+          <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
+        </div>
+        <div class="footer-copyright">
+          <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
+        </div>
+        <div class="footer-media-logo-container">
+          <img
+            class="footer-media-logo"
+            src="src/logo-media-bottom.png"
+            style="height: 20vh; width: 23vw"
+          />
+        </div>
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -510,7 +570,7 @@
             {
               breakpoint: 480,
               settings: {
-                slidesToShow: 2,
+                slidesToShow: 1,
                 slidesToScroll: 1,
                 dots: false, // 동그라미 제거
               },
