--- a/index.html
+++ b/index.html
@@ -232,22 +232,32 @@
         </ul>
       </section>
       <section id="main-bottom-drink-section">
-        <div class="main-bottom-drink-text">
-          <h3 class="main-bottom-drink-title">
-            <span>NOONA COFFEE</span>
-            'S BEST MENU
-          </h3>
-          <p>"눈나커피의 베스트 메뉴를 만나보세요."</p>
+        <div
+          class="main-bottom-drink-text"
+          data-aos="fade-up"
+          data-aos-duration="2500"
+        >
+          <div class="main-bottom-drink-title">
+            <span>HIO COFFEE</span>'S VALUATION
+          </div>
+          <p class="main-bottom-drink-txt">
+            “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
+          </p>
         </div>
         <div id="main-bottom-drinks-wrapper"></div>
       </section>
       <section id="main-bottom-map-section">
-        <div class="main-bottom-map-text">
-          <h3 class="main-bottom-map-title">
-            <span>NOONA COFFEE</span>
-            'S BEST MENU
-          </h3>
-          <p>"눈나커피의 여러분 가까이에 있습니다."</p>
+        <div
+          class="main-bottom-drink-text"
+          data-aos="fade-up"
+          data-aos-duration="2500"
+        >
+          <div class="main-bottom-drink-title">
+            <span>HIO COFFEE</span>'S VALUATION
+          </div>
+          <p class="main-bottom-drink-txt">
+            “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
+          </p>
         </div>
         <div id="main-bottom-map-wrapper">
           <div class="main-bottom-map-box">
@@ -306,12 +316,17 @@
         </div>
       </section>
       <section id="main-bottom-mobile-map-section">
-        <div class="main-bottom-map-text">
-          <h3 class="main-bottom-map-title">
-            <span>NOONA COFFEE</span>
-            'S BEST MENU
-          </h3>
-          <p>"눈나커피의 여러분 가까이에 있습니다."</p>
+        <div
+          class="main-bottom-drink-text"
+          data-aos="fade-up"
+          data-aos-duration="2500"
+        >
+          <div class="main-bottom-drink-title">
+            <span>HIO COFFEE</span>'S VALUATION
+          </div>
+          <p class="main-bottom-drink-txt">
+            “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
+          </p>
         </div>
         <div id="main-bottom-mobile-map-indicators" class="carousel slide">
           <div class="carousel-indicators">
